--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<!-- Toolbar -->
+<div class="toolbar" role="banner">
+  <span class="material-icons"> travel_explore </span>
+  <h1 class="title" routerLink="/">TURISMO CON EXCELENCIA</h1>
+</div>
+
+<div class="content" role="main">
+  <router-outlet></router-outlet>
+</div>
