--- a/src/app/publicaciones/publicaciones.component.html
+++ b/src/app/publicaciones/publicaciones.component.html
@@ -7,8 +7,10 @@
       <img [src]="imagenes[i]" alt="" width="200px">
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="abrirPublicacion(publicacion)">Ver mas</button>
-      <button mat-button>SHARE</button>
+      <button mat-raised-button (click)="abrirPublicacion(publicacion)">Ver mas</button>
+      <button mat-raised-button color="primary">SHARE</button>
     </mat-card-actions>
   </mat-card>
 </div>
+
+<mat-progress-bar color="primary" mode="query" *ngIf="publicaciones.length == 0"></mat-progress-bar>
