--- a/src/app/publicaciones/ver-publicacion/ver-publicacion.component.scss
+++ b/src/app/publicaciones/ver-publicacion/ver-publicacion.component.scss
@@ -1,22 +1,30 @@
-
 .publicacion {
-  form {
-    .comentario {
-      display: block;
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 50px;
 
-    }
-    button {
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #f5f5f5;
+  .content-price {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .content-image {
+      display: flex;
+      flex-direction: column;
+      row-gap: 15px;
     }
   }
 }
 
+form {
+  display: inline-flex;
+  width: 100%;
 
+  .comentario {
+    width: 90%;
+  }
+  button {
+    height: 80px;
+  }
+}
