--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
 <div class="toolbar" role="banner">
   <span class="material-icons"> travel_explore </span>
   <h1 class="title" routerLink="/">TURISMO CON EXCELENCIA</h1>
+  <button mat-raised-button (click)="logout()">
+    Logout
+    <span class="material-icons"> logout </span>
+  </button>
 </div>
 
 <div class="content" role="main">
